data/derived/sp14/progs/unify/prog1171.ml.out
Characters 86-87:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> ('a -> 'b -> 'c) -> 'c
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside ('a -> 'b -> 'c) -> 'c
